opam-version: "2.0"
synopsis: "NLopt"
description: "OCaml bindings to the NLOpt optimization library"
maintainer: ["Michał Kurcewicz        <michal.kurcewicz@gmail.com>"]
authors: [
  "Michał Kurcewicz       <michal.kurcewicz@gmail.com>"
  "Christophe Troestler   <Christophe.Troestler@umons.ac.be>"
]
license: "LGPL-2.1+ with OCaml linking exception"
tags: ["clib:nlopt"]
homepage: "https://github.com/mkur/nlopt-ocaml"
doc: "https://github.com/mkur/nlopt-ocaml"
bug-reports: "https://github.com/mkur/nlopt-ocaml/issues"
depends: [
  "ocaml" {>= "4.08"}
  "dune" {>= "2.9" & >= "1.10"}
  "odoc" {with-doc}
]
build: [ "dune" "build" "-p" name "-j" jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
]
dev-repo: "git+https://github.com/mkur/nlopt-ocaml.git"
depexts: [
  ["libnlopt-dev"] {os-family = "debian"}
  ["nlopt"] {os = "macos"}
]
