
(executable
 (name discover)
 (modules Discover)
 (libraries dune-configurator))

 (rule
 (targets c_flags.sexp c_library_flags.sexp)
 (action
  (run ./discover.exe)))

(library
  (public_name nlopt)
  (modules nlopt)
  (foreign_stubs 
    (language c) 
    (names nlopt_wrapper)
    (flags (:include c_flags.sexp)))
  (c_library_flags (:include c_library_flags.sexp)))

  